--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title> The simplest HTML example 1234</title>
+      <title> The simplest HTML example</title>
    </head>
    <body>
       <h1> This is  an HTML Page </h1>
